# thermalcam

./: CMakeLists.txt  README.md  main.c  package.xml
launch/: cameras.launch
scripts/: save_all3  save_gps  save_images_both  save_images_ptg  save_images_thermal  synchro  thermaltopic
